--- a/Home/index.html
+++ b/Home/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Charlotte 世一</title>
-    <h1>Baby shark dududdududuu</h1>
+    <!-- <title>Charlotte 世一</title> -->
+    <!-- <h1>Baby shark dududdududuu</h1> -->
   </head>
   <body>
     <a href="../index.html">Go Back</a>
