--- a/Home/index.html
+++ b/Home/index.html
@@ -6,6 +6,6 @@
   </head>
   <body>
     <a href="../index.html">Go Back</a>
-    <button onclick="alert('I love You')">Click Me</button>
+    <!-- <button onclick="alert('I love You')">Click Me</button> -->
   </body>
 </html>
