--- a/Home/index.html
+++ b/Home/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <!-- <title>Charlotte 世一</title> -->
-    <!-- <h1>Baby shark dududdududuu</h1> -->
+    <title>Charlotte 世一</title>
+    <h1>Baby shark dududdududuu</h1>
   </head>
   <body>
     <a href="../index.html">Go Back</a>
-    <!-- <button onclick="alert('I love You')">Click Me</button> -->
+    <button onclick="alert('I love You')">Click Me</button>
   </body>
 </html>
