--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
-<head>
+  <head>
     <title>My Page</title>
-</head>
-<body>
+  </head>
+  <body>
     <h1>Welcome to My Website</h1>
     <p>Click the buttons:</p>
-    <a href="Home/index.html">Go to Homepage</a>
+    <!-- <a href="Home/index.html">Go to Homepage</a> -->
     <a href="JSTest/index.html">Go to JavaScript Testing</a>
     <a href="ToDoList/index.html">Go to To-do List</a>
-</body>
+  </body>
 </html>
