--- a/food.html
+++ b/food.html
@@ -1,21 +1,26 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>My Personal Homepage</title>
+    <title>Food</title>
     <link rel="stylesheet" type="text/css" href="styles.css" />
   </head>
   <body>
     <header>
-      <h1>Welcome to My Personal Homepage</h1>
+      <h1>Food</h1>
     </header>
-
     <nav>
       <ul>
-        <li><a href="food.html">Food</a></li>
-        <li><a href="music.html">Music</a></li>
-        <li><a href="song-sharing.html">Song Sharing</a></li>
+        <li><a href="index.html">Back</a></li>
       </ul>
     </nav>
+    <section>
+      <h2>Favorite Recipes</h2>
+      <ul>
+        <li>Recipe 1</li>
+        <li>Recipe 2</li>
+        <li>Recipe 3</li>
+      </ul>
+    </section>
 
     <footer>
       <p>&copy; 2023 My Personal Homepage. All rights reserved.</p>
