--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
       document.getElementById("response").innerText = "Processing...";
 
       // Make API call using fetch
-      fetch('https://openai-poc-api.edcity.hk//api/langchain/test', {
+      fetch('https://openai-poc-api.edcity.hk/api/langchain/test', {
         method: 'POST',
         headers: {
           'Content-Type': 'application/json'
